clusters/triss/webdav/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: books
  namespace: webdav
spec:
  selector:
    app: books
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
